# Eigen-Geometric-Control

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  ARM_CONTROL_LORENTZ.md  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  COMPUTATIONAL_THEORY.md  CONTRIBUTING.md  EIGENFUNCTION_INTEGRATION.md  LICENSE  LICENSE-COMMERCIAL  LORENTZ_INTEGRATION.md  MANIFEST.in  PRODUCTION_READY_GUIDE.md  README.md  SECURITY.md  TESTING_RESULTS.md  UPGRADE_ROADMAP.md  benchmark_accuracy.py  benchmark_adaptive_twophase.py  benchmark_coherent_decomposition.py  benchmark_dynamic.py  benchmark_dynamic_adaptation.py  benchmark_geodesic_planning.py  benchmark_landing.py  benchmark_mars_landing.py  benchmark_moving_targets.py  benchmark_qec.py  benchmark_scaling.py  benchmark_self_tuning.py  benchmark_stereo_lorentz.py  benchmark_terminal_descent.py  benchmark_visual_servoing.py  benchmark_weak_stereo.py  benchmark_weak_stereo_noisy.py  benchmark_xor.py  demo_multi_agent.py  demo_self_simulation.py  (+7 more)
.github/workflows/: ci.yaml
configs/: default.yaml  fast_convergence.yaml
data/: eigen_arm_trace.csv  xor_rotation_trace.csv
docs/: NOPERTHEDRON_CONNECTION.md  overview.md
examples/: README.md  lightlike_observer_test.py  lorentz_arm_control_demo.py  lorentz_stereo_demo.py  noperthedron_comparison.py  quickstart.py
legal-templates/: COMMERCIAL-LICENSE-AGREEMENT.md  README.md
scripts/: generate_all_results.py
src/: __init__.py  config.py  eigen_3dof_core.py  eigen_adaptive.py  eigen_arm_control.py  eigen_core.py  eigen_decomposition.py  eigen_edl_core.py  eigen_geodesic.py  eigen_invariants.py  eigen_lorentz.py  eigen_meta_control.py  eigen_multi_agent.py  eigen_noperthedron.py  eigen_qec.py  eigen_similarity.py  eigen_weak_measurement.py  eigen_xor_rotation.py
tests/: README.md  __init__.py  test_3dof_failure_modes.py  test_adaptive_control.py  test_coherent_decomposition.py  test_ds2_temporal.py  test_dynamic_invariant.py  test_edl.py  test_eigen_core.py  test_eigen_lorentz.py  test_eigen_noperthedron.py  test_eigen_similarity.py  test_failure_modes.py  test_frequency_selective_damping.py  test_geodesic_planning.py  test_integration.py  test_moving_targets.py  test_paradox_coordination.py  test_qec.py  test_self_simulation.py  test_weak_stereo.py
