# pyproject.toml - Modern Python project configuration
# This file configures your package and all development tools in one place

# ============================================================================
# Build System Configuration
# ============================================================================
# Tells pip how to build your package
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata (Modern alternative to setup.py)
# ============================================================================
[project]
name = "eigen-geometric-control"
version = "1.0.0"
description = "Minimal geometric robot control framework using gradient descent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jonathan McReynolds", email = "mcreynolds.jon@gmail.com"}
]
keywords = ["robotics", "control", "geometric", "optimization", "gradient-descent", "robot-arm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.6.0",
    "pyyaml>=5.4.0",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/InauguralPhysicist/Eigen-Geometric-Control"
Repository = "https://github.com/InauguralPhysicist/Eigen-Geometric-Control"
Issues = "https://github.com/InauguralPhysicist/Eigen-Geometric-Control/issues"

# ============================================================================
# Black - Code Formatter (Industry Standard)
# ============================================================================
# Black formats your code automatically to ensure consistency
# Run: black src/ tests/
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude common directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# isort - Import Sorter (Organizes imports alphabetically)
# ============================================================================
# Run: isort src/ tests/
[tool.isort]
profile = "black"  # Compatible with Black formatter
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# ============================================================================
# pytest - Testing Framework
# ============================================================================
# Configuration for running tests
# Run: pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Strict marker validation
    "--cov=src",                   # Measure code coverage
    "--cov-report=term-missing",   # Show missing lines in coverage
    "--cov-report=html",           # Generate HTML coverage report
    "--cov-report=xml",            # Generate XML coverage report (for Codecov)
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================================
# Coverage.py - Code Coverage Tool
# ============================================================================
# Measures which lines of code are tested
[tool.coverage.run]
source = ["src"]
branch = true  # Measure branch coverage, not just line coverage
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# mypy - Static Type Checker
# ============================================================================
# Checks type hints for correctness
# Run: mypy src/
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when you have type hints everywhere
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Ignore missing imports for libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true

# ============================================================================
# setuptools - Package Discovery
# ============================================================================
[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ============================================================================
# bandit - Security linter
# ============================================================================
# Scans code for common security issues
# Run: bandit -r src/
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/env", "/.venv"]
skips = ["B101"]  # Skip assert_used (common in tests)
